@@ -20,7 +20,7 @@ For the other link cables, no driver is needed because it's provided.
 New capabilities:
 -----------------
 
-	- TI84+ support
+	- TI84+ support (no OS upgrade)
 	- TI89 Titanium support (no OS upgrade)
 
 Improvements:
