@@ -1,38 +1,103 @@
 This is a list of some things to do:
 
-* image loader: PCX/XPM/JPG
+<<
+Hi. I just wanted to make a few suggestions and report some things that 
+appear to be bugs. Let me know if more information is needed, or if I 
+misunderstood something.
 
-- use Vti skins and display a TI keyboard for remote control
+Thanks for the nice work!
 
-+ implement the management of group files (merging, splitting, exploding, ...)
-+ a better doc (html) & Help formatted (html, groff, gnome help ??)
-+ TI83(+) ROM dumper (for Tilem)
-+ view into PAK/Group (clist+menus+send var) -> plugin (Group File Manager)
-+ if parport not compiled in kernel, tilp segfaults
-+ command line: the ability to use any function from cmdline (OS, ROMdump, ...)
-+ add an overwrite protection (PC->TI) by systematically doing a dirlist
-+ force ready call (auto-detect) before each function
-+ extract a ROM image from a .tib/.9xu/.89u FLASH file
-+ TI89/92+ ROM dump
-+ TI89/92+ pbs and auto-detection
-+ TI89 support to improve (especially HW2)
-+ accelerator keys for the dialog box buttons. Mouse is sometimes boring.
-+ fargo4TiLP & fargo (flinker): done through TiFFEP
-+ close TiLP after command line use (console/Explorer)
-+ do associations types in IS instead of Tilp.reg
-+ sending by command line: use the file type for determining the calc type
-+ TI86 has a backup capability but no TIGL file format !!!
-+ TI82, 85 support to finish
-+ fonts in dboxes !
-+ TI83 support to update
-+ locale & i18n
-+ the ability to override the file format to send (82 file -> TI85)
-+ internationalization of TiLP
-+ if 2 sessions of TiLP are launched under Win32, it may cause some pbs
-+ startup box
-+ rights access pbs on directories
-+ pixmaps
-+ choose the font to use in the right window
+TiLP 6.74
+SuSE Linux Pro 9.1
+Kernel 2.6.4-52
+Cable: Sliverlink
+TI-89: AMS 2.09
+TI-86: ROM 1.4
+I also have a TI-82 and TI-85, but I haven't tested them with TiLP yet.
+
+SUGGESTIONS:
+
+* When transmission errors occur, it would be nice to have Retry and 
+Skip buttons for backups or sending/receiving multiple files. When TI 
+Connect encounters an error, it gives a Retry button that tries the 
+operation again starting with the variable where the error occurred, and 
+a Skip button that continues the operation but skips the file where the 
+error occurred.
+
+This would be especially welcome in TiLP for Silverlink users (like me), 
+because sometimes errors occur due to the cable's strange behavior. If a 
+problem occurs in the middle of a backup, for instance, I could just 
+Retry with the same file and not have to start the whole transfer over 
+again. If one particular file seems to cause problems, I could use Skip 
+to skip that file and continue with the rest of the files, without 
+having to cancel and select the other files by hand.
+
+*Selecting multiple files is a little strange. Ctrl and Shift keys while 
+clicking in the lists work as expected, but unlike with other programs 
+like Konqueror, I cannot use both Ctrl and Shift at the same time. TiLP 
+acts like I only pressed Ctrl. It would be nice if Ctrl+Shift worked as 
+in many programs.
+
+Also, when I have multiple files selected and try to drag them, it 
+erases my selection. If I hold Ctrl while dragging, it doesn't erase the 
+selection, but it toggles the state of the file where I started 
+dragging. This is somewhat confusing. (In other words, dragging should 
+not also count as clicking.)
+
+* When transferring files and getting directory lists, the transfer 
+progress dialog box automatically resizes itself horizontally. Since 
+this often happens many times a second, this is quite distracting. Maybe 
+the box shouldn't resize automatically, or it should only resize in one 
+direction (for instance, get wider but not shorter again, even when 
+there is empty space available), so that it does not change size as often.
+
+* Items like "Screen" and "Operating system" do not appear to be 
+selectable. It took me a while to figure out how to transfer these 
+items. Since they are not highlighted when clicked, I did not know I 
+could still drag them to the righthand pane (to transfer them to the 
+computer).
+
+PROBLEMS:
+
+TI-89--
+
+*Every time I send a variable to my TI-89:
+
+1. TiLP always gets a list of the files on the calc, even if I already 
+did it (which is time-consuming)
+2. It tells me "The following variable(s) exist(s) on calculator" even 
+when they don't. The list showing the variables is blank, because the 
+variables do not exist on the calculator. Usually picking Overwrite will 
+send the files without problems, but it's annoying.
+
+*TiLP detects these files in the Main folder if statistics operations 
+were performed on the TI-89:
+   -regCoef
+   -regEq
+These are system files, and the TI-89 does not seem to like sending 
+these files, so they produce an error in TiLP when the user tries to 
+transfer them or when a backup is performed. Maybe TiLP should not 
+display these files (or at least ignore them when making a backup).
+
+*The dumprom program that gets sent to the TI-89 when sending the 
+operating system to the computer erases the line above the calc's status 
+bar and does not restore it. TiLP does not warn that this will happen, 
+and it doesn't send a program (such as dumpfix) to correct it.
+
+TI-86--
+
+*The names of variables containing Greek characters are not listed in 
+TiLP correctly. If the names contain Greek characters, the Greek 
+character and all characters after it are missing. For files whose names 
+begin with Greek characters, there is no name displayed at all (the name 
+is effectively a null string), and sending to the computer results in a 
+hidden file named ".86?" where ? is the letter indicating the variable 
+type. If several such files exist on the calculator, it is very 
+difficult to tell them apart because of this.
+
+Greek characters in variable names seem to work fine for the TI-89, 
+though. This problem occurs with the TI-86.
+>>
 
 + = done.
 * = in progress.
